# clickweb

./: Cargo.toml  LICENSE  README.md
src/: main.rs
static/: app.js  index.html  style.css
