[package]
name = "clickweb"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1"
axum = { version = "0.8.7", features = [
    "http1",
    "query",
    "json",
    "tokio",
], default-features = false }
clickhouse = "0.14.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["compression-zstd"] }
